adding resizable image helper

--- a/app/assets/stylesheets/slices/admin.css.erb
+++ b/app/assets/stylesheets/slices/admin.css.erb
@@ -2273,3 +2273,17 @@ Date Field
   .page-history time {
     font-weight: normal;
   }
+
+.resizable-attatchment{
+  height: auto !important;
+}
+.resizable-attatchment .asset-library-item{
+  width: 100%;
+  height: auto;
+}
+.resizable-attatchment img {
+  width: 500px;
+  height: auto;
+  position: initial;
+  margin: auto;
+}
