--- a/app/assets/stylesheets/slices/slices.css
+++ b/app/assets/stylesheets/slices/slices.css
@@ -2,6 +2,7 @@
  *= require_self
  *= require slices/reset_html5
  *= require slices/admin
+ *= require slices/jquery.Jcrop
 
  *= require admin
  */
