Adding 16:9 option for posts

--- a/app/assets/javascripts/slices/app/views/assets_resize_image_view.js.erb
+++ b/app/assets/javascripts/slices/app/views/assets_resize_image_view.js.erb
@@ -43,6 +43,9 @@ slices.AssetResizeView = slices.AssetThumbView.extend({
       case "wide":
         ratio = 3/2;
         break;
+      case "competition":
+        ratio = 16/9;
+        break;
       case "normal":
       case "large":
         ratio = 1;
