Add competition tall to aspect ratio

--- a/app/assets/javascripts/slices/app/views/assets_resize_image_view.js.erb
+++ b/app/assets/javascripts/slices/app/views/assets_resize_image_view.js.erb
@@ -46,6 +46,9 @@ slices.AssetResizeView = slices.AssetThumbView.extend({
       case "competition":
         ratio = 16/9;
         break;
+      case "competition-tall":
+        ratio = 2/3;
+        break;
       case "normal":
       case "large":
         ratio = 1;
