--- a/app/views/admin/shared/_asset_storage.html.erb
+++ b/app/views/admin/shared/_asset_storage.html.erb
@@ -8,7 +8,9 @@
       success_action_status : '201',
     };
 
-    slices.S3_URL = 'https://<%= Slices::Config.s3_credentials[:bucket] %>.s3.amazonaws.com/';
+    <%- region = if Slices::Config.s3_credentials[:region] ? "s3-#{Slices::Config.s3_credentials[:region]}" : 's3' %>
+
+    slices.S3_URL = 'https://<%= Slices::Config.s3_credentials[:bucket] %>.<%= region %>.amazonaws.com/';
     slices.S3_TEMPFILE_KEY_PREFIX = '<%= Slices::Config::S3_TEMPFILE_KEY_PREFIX %>';
     slices.fileClass = slices.S3File;
   <% else %>
